Add multiple endpoints

--- a/example_programs/websocket_example/crash_client.html
+++ b/example_programs/websocket_example/crash_client.html
@@ -5,7 +5,8 @@
     <script>
       let ws = null;
       let count = 0;
-      const wsUrl = 'ws://localhost:9275/websocket';
+      const id = Math.floor(Math.random() * 10000) % 10;
+      const wsUrl = `ws://localhost:9275/websocket${id}`;
 
       const ping = () => ws.send('ping');
           
@@ -24,7 +25,7 @@
               // console.log('onmessage', event.data);
               ++count;
               img.src = URL.createObjectURL(event.data);
-              h1.innerHTML = `${count} messages`;
+              h1.innerHTML = `${wsUrl}: ${count} messages`;
               ping();
           }
 
